<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityChitiet"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:orientation="horizontal">
            <Button
                android:layout_width="@dimen/btn_day_widthsize"
                android:layout_height="wrap_content"
                android:text="@string/dayofweek8"/>
            <Button
                android:layout_width="@dimen/btn_day_widthsize"
                android:layout_height="wrap_content"
                android:text="@string/dayofweek7" />

            <Button
                android:layout_width="@dimen/btn_day_widthsize"
                android:layout_height="wrap_content"
                android:text="@string/dayofweek6" />

            <Button
                android:layout_width="@dimen/btn_day_widthsize"
                android:layout_height="wrap_content"
                android:text="@string/dayofweek5" />

            <Button
                android:layout_width="@dimen/btn_day_widthsize"
                android:layout_height="wrap_content"
                android:text="@string/dayofweek4" />

            <Button
                android:layout_width="@dimen/btn_day_widthsize"
                android:layout_height="wrap_content"
                android:text="@string/dayofweek3" />

            <Button
                android:layout_width="@dimen/btn_day_widthsize"
                android:layout_height="wrap_content"
                android:text="@string/dayofweek2" />

        </LinearLayout>

    </ScrollView>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:text="22/12/2020"
        android:textStyle="bold"
        android:textSize="24dp"
        android:gravity="center_vertical"
        android:padding="2dp"
        android:textColor="#000"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Rạp Cao Thang 1"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textColor="#000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="fill">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/time_btnsize"
                android:text="08:15"
                android:textSize="@dimen/time_textsize"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/time_btnsize"
                android:text="09:35"
                android:textSize="@dimen/time_textsize"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/time_btnsize"
                android:text="10:55"
                android:textSize="@dimen/time_textsize"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Rạp Huỳnh Thúc Kháng"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textColor="#000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="fill">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_seat_size"
                android:text="08:15"
                android:textSize="@dimen/time_textsize"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_seat_size"
                android:text="09:35"
                android:textSize="@dimen/time_textsize"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_seat_size"
                android:text="10:55"
                android:textSize="@dimen/time_textsize"/>
        </LinearLayout>



    </LinearLayout>


</LinearLayout>